--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -206,7 +206,7 @@ Parameters:
   EFSThroughputMode:
     Description: The throughput mode for the EFS volume.
     Type: String
-    Default: provisioned
+    Default: bursting
     AllowedValues:
       - provisioned
       - bursting
