--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -401,6 +401,6 @@ Resources:
       Parameters:
         QSS3BucketName: !Ref QSS3BucketName
         QSS3BucketRegion: !Ref QSS3BucketRegion
-        QSS3KeyPrefix: !Ref QSS3KeyPrefix
+        QSS3KeyPrefix: !Sub "${QSS3KeyPrefix}submodules/quickstart-aws-acm-certificate/"
         DomainName: !Ref MoleculeFQDN
         HostedZoneID: !Ref HostedZoneID
