Adding skeleton for docs-as-code

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "submodules/quickstart-aws-acm-certificate"]
 	path = submodules/quickstart-aws-acm-certificate
 	url = https://github.com/aws-quickstart/quickstart-aws-acm-certificate.git
+[submodule "docs/boilerplate"]
+	path = docs/boilerplate
+	url = https://github.com/aws-quickstart/quickstart-documentation-base-common.git
