--- a/templates/boomi-molecule-master.template.yaml
+++ b/templates/boomi-molecule-master.template.yaml
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Description: Boomi Molecule Installation Script. This creates a VPC, Public Subnets and Private Subnets, and stages a Boomi Molecule cluster. (qs-1q1tds34t)
 Metadata:
-  Documentation:
+  QuickStartDocumentation:
     EntrypointName: "Launch into a new VPC"
   AWS::CloudFormation::Interface:
     ParameterGroups:
