--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,7 @@
 [submodule "submodules/quickstart-linux-bastion"]
 	path = submodules/quickstart-linux-bastion
 	url = https://github.com/aws-quickstart/quickstart-linux-bastion.git
+	branch = main
 [submodule "submodules/quickstart-aws-acm-certificate"]
 	path = submodules/quickstart-aws-acm-certificate
 	url = https://github.com/aws-quickstart/quickstart-aws-acm-certificate.git
