--- a/.gitmodules
+++ b/.gitmodules
@@ -8,6 +8,7 @@
 [submodule "submodules/quickstart-aws-acm-certificate"]
 	path = submodules/quickstart-aws-acm-certificate
 	url = https://github.com/aws-quickstart/quickstart-aws-acm-certificate.git
+	branch = main
 [submodule "docs/boilerplate"]
 	path = docs/boilerplate
 	url = https://github.com/aws-quickstart/quickstart-documentation-base-common.git
