--- a/.taskcat.yml
+++ b/.taskcat.yml
@@ -1,7 +1,8 @@
 project:
   name: quickstart-boomi-molecule
   owner: quickstart@amazon.com
-  package_lambda: false
+  lambda_source_path: functions/source
+  lambda_zip_path: functions/packages
   regions:
     - ap-northeast-1
     - ap-northeast-2
@@ -17,20 +18,19 @@ project:
     - us-east-2
     - us-west-1
     - us-west-2
-  parameters:
-    AvailabilityZones: $[taskcat_genaz_2]
-    BoomiAccountID: override
-    BoomiPassword: override
-    BoomiUsername: override
-    HostedZoneID: override
-    KeyPairName: override
-    QSS3BucketName: $[taskcat_autobucket]
-    QSS3BucketRegion: $[taskcat_current_region]
-    RemoteAccessCIDR: 127.0.0.1/32
 tests:
-  quickstart-boomi-molecule:
+  quickstart-boomi-molecule-password:
     regions:
       - us-east-2
     parameters:
+      AvailabilityZones: $[taskcat_genaz_2]
+      BoomiAccountID: override
+      BoomiUsername: override
+      HostedZoneID: override
+      KeyPairName: override
+      QSS3BucketName: $[taskcat_autobucket]
+      QSS3BucketRegion: $[taskcat_current_region]
+      RemoteAccessCIDR: 127.0.0.1/32
       MoleculeFQDN: override
     template: templates/boomi-molecule-master.template.yaml
+
